[package]
name = "budgie"
version = "0.2.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
description = "The backend of a free budgeting tool"
license = "MIT"


[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
log = "*"
env_logger = "*"
chrono = "*"
thiserror = "*"
actix-web = "4"

[dev-dependencies]
ctor = "*"
